[gd_scene load_steps=12 format=2]

[ext_resource path="res://prefabs/MinigamePlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://prefabs/FileCabinet.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/tilesets/brain_wall.tres" type="TileSet" id=3]
[ext_resource path="res://scripts/Minigame_Calc_Files.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/screen_window.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/shaded_window_border.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/temp sprites/temp_blank_file.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/temp_file_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/fonts/temp_file_font_words.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/sprites/temp sprites/checkmark.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/window_border.png" type="Texture" id=11]

[node name="Minigame_Calc_Files" type="Node2D"]
script = ExtResource( 4 )

[node name="MinigamePlayer" parent="." instance=ExtResource( 1 )]
position = Vector2( -317, 137 )
scale = Vector2( 1.32, 1.32 )

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 100, 100 )
format = 1
tile_data = PoolIntArray( -196614, 3, 0, -196613, 3, 0, -196612, 3, 0, -196611, 3, 0, -196610, 3, 0, -196609, 3, 0, -262144, 3, 0, -262143, 3, 0, -262142, 3, 0, -262141, 3, 0, -262140, 3, 0, -262139, 3, 0, -131078, 3, 0, -131077, 3, 0, -131076, 3, 0, -131075, 3, 0, -131074, 3, 0, -131073, 3, 0, -196608, 3, 0, -196607, 3, 0, -196606, 3, 0, -196605, 3, 0, -196604, 3, 0, -196603, 3, 0, -65542, 3, 0, -65541, 3, 0, -131068, 3, 0, -131067, 3, 0, -6, 3, 0, -5, 3, 0, -65532, 3, 0, -65531, 3, 0, 65530, 3, 0, 65531, 3, 0, 4, 3, 0, 5, 3, 0, 131066, 3, 0, 131067, 3, 0, 65540, 3, 0, 65541, 3, 0, 196602, 3, 0, 196603, 3, 0, 196604, 3, 0, 196605, 3, 0, 196606, 3, 0, 196607, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 262138, 3, 0, 262139, 3, 0, 262140, 3, 0, 262141, 3, 0, 262142, 3, 0, 262143, 3, 0, 196608, 3, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 3, 0 )

[node name="FileCabinet" parent="." instance=ExtResource( 2 )]
position = Vector2( -186, 150 )

[node name="FileCabinet2" parent="." instance=ExtResource( 2 )]
position = Vector2( -78, 150 )

[node name="FileCabinet3" parent="." instance=ExtResource( 2 )]
position = Vector2( 30, 150 )

[node name="FileCabinet4" parent="." instance=ExtResource( 2 )]
position = Vector2( 138, 150 )

[node name="FileCabinet5" parent="." instance=ExtResource( 2 )]
position = Vector2( 246, 150 )

[node name="FileCabinet6" parent="." instance=ExtResource( 2 )]
position = Vector2( 354, 150 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="WindowScreen" type="Sprite" parent="."]
position = Vector2( 0, 2.66968 )
scale = Vector2( 0.58, 0.615 )
z_index = -2
texture = ExtResource( 5 )

[node name="WindowBorder" type="Sprite" parent="."]
scale = Vector2( 0.58, 0.615 )
texture = ExtResource( 11 )

[node name="ShadedWindowBorder" type="Sprite" parent="."]
scale = Vector2( 0.58, 0.615 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = -378.619
margin_top = -186.969
margin_right = -202.619
margin_bottom = -150.969
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Obtain files:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="File" type="Sprite" parent="."]
position = Vector2( -357, -110 )
scale = Vector2( 0.025, 0.029 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="File"]
margin_left = -893.0
margin_top = -1422.46
margin_right = 591.0
margin_bottom = 1032.54
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="File"]
visible = false
position = Vector2( 420, -100 )
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )

[node name="File2" type="Sprite" parent="."]
position = Vector2( -292, -110 )
scale = Vector2( 0.025, 0.029 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="File2"]
margin_left = -893.0
margin_top = -1414.77
margin_right = 591.0
margin_bottom = 1040.23
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="File2"]
visible = false
position = Vector2( 420, -100 )
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )

[node name="File3" type="Sprite" parent="."]
position = Vector2( -227, -110 )
scale = Vector2( 0.025, 0.029 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="File3"]
margin_left = -893.0
margin_top = -1399.41
margin_right = 591.0
margin_bottom = 1055.59
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="File3"]
visible = false
position = Vector2( 420, -100 )
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )
